# forecasting-with-machine-learning

./: pyproject.toml
02-multistep-forecasting/: 04-direct-forecasting-skforecast.ipynb  05-direct-forecasting-sklearn.ipynb  06-direct-forecasting-with-future-known-features.ipynb
02-multistep-forecasting/assignment/: 01-assigment.ipynb  01-solution.ipynb  02-assignment.ipynb  02-solution.ipynb
