[tool.poetry]
name = "forecasting-with-machine-learning"
version = "0.1.0"
description = ""
authors = ["Marc Svensson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.1"
skforecast = "^0.14.0"
feature-engine = "^1.8.3"
ipywidgets = "^8.1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
